--- a/index.css
+++ b/index.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Montserrat", serif;
 }
 
 
@@ -17,9 +22,29 @@
 .last{
     width: 20%;
     height: 90%;
-    background-color: hsl(120, 91%, 22%);
+    background-color: #497d6e;
     position: absolute;
     right: 0;
     z-index: 2;
 }
 
+.first{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.first img{
+    cursor: pointer;
+}
+
+
+.details{
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    margin-left: 50px;
+}
