--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Montserrat", serif;
+    font-weight: 400;
 }
 
 
@@ -47,4 +48,32 @@
     gap: 10px;
     padding: 10px;
     margin-left: 50px;
+}
+
+
+
+.navbar{
+    width: 80%;
+    display: flex;
+    gap: 500px;
+    padding: 20px;
+}
+
+.links ul{
+    display: flex;
+    gap: 50px;
+    list-style-type: none;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.links ul > li{
+    cursor: pointer;
+}
+
+
+
+.logo p{
+    font-style: bold;
+    font-size: 22px;
 }
