--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@
 #hero{
     width: 100%;
     height: 100vh;
-    background-color: blue;
+    /* background-color: blue; */
     position: relative;
     z-index: 1;
 }
@@ -26,7 +26,7 @@
     background-color: #497d6e;
     position: absolute;
     right: 0;
-    z-index: 2;
+    z-index: 5;
 }
 
 .first{
@@ -80,9 +80,10 @@
 
 
 .bigger{
-    width: 80%;
+    width: 100%;
     height: 80%;
-    background-color: rgb(6, 157, 157);
+    /* background-color: rgb(6, 157, 157); */
     z-index: 3;
     position: absolute;
+    padding: 50px;
 }
