--- a/index.css
+++ b/index.css
@@ -87,3 +87,39 @@
     position: absolute;
     padding: 50px;
 }
+
+
+
+.direction{
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 20px;
+}
+
+
+.dot{
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: rgba(34, 33, 33, 0.927);
+}
+
+.dots{
+    display: flex;
+    gap: 70px;
+    align-items: center;
+}
+
+.circle.active{
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
