--- a/index.css
+++ b/index.css
@@ -257,3 +257,20 @@
         margin-left: 30px;
     }
 }
+
+
+/* Hero and navbar Section Close Here */
+
+
+
+
+/* Catalog section start from here */
+.catalog{
+    width: 100%;
+    height: 120px;
+    background-color: #9c969662;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+}
