--- a/index.css
+++ b/index.css
@@ -332,4 +332,48 @@
     width: 100%;
     height: 100vh;
     background-color: #497d6e;
+    padding: 30px;
+}
+
+
+.bigone{
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.bigdo{
+    width: 100%;
+    height: fit-content;
+    background-color: pink;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.divs{
+    width: 300px;
+    height: 300px;
+    border: 2px solid black;
+    background-color: hsl(0, 0%, 93%);
+    color: black;
+    margin-top: 10px;
+}
+
+
+.awal{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 50px;
+}
+
+.akhir{
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 50px;
 }
