--- a/index.css
+++ b/index.css
@@ -436,7 +436,7 @@
 
 .creds{
     width: 40%;
-    height: 90%;
+    height: 100%;
     border: 2px solid black;
     overflow: hidden;
 }
@@ -529,4 +529,44 @@
 .dollar{
     font-size: 14px;
 }
+
+.firstone{
+    width: 100%;
+    height: 40%;
+    background-color: pink;
+    border: 2px solid black;
+    padding: 10px;
+}
+.secondone{
+    width: 100%;
+    height: 30%;
+    background-color: blueviolet;
+    border: 2px solid black;
+}
+
+.thirdone{
+    width: 100%;
+    height: 30%;
+    background-color: blue;
+    border: 2px solid black;
+}
+
+
+.feature{
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: black;
+}
+
+.long{
+    font-size: 32px;
+    margin-bottom: 30px;
+    color: #497d6e;
+}
+
+.desc{
+    font-size: 12px;
+    color: black;
+}
+
 
