--- a/index.css
+++ b/index.css
@@ -542,6 +542,9 @@
     height: 30%;
     background-color: blueviolet;
     border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
 }
 
 .thirdone{
@@ -549,6 +552,7 @@
     height: 30%;
     background-color: blue;
     border: 2px solid black;
+    padding: 10px;
 }
 
 
@@ -562,11 +566,61 @@
     font-size: 32px;
     margin-bottom: 30px;
     color: #497d6e;
+    
 }
 
 .desc{
     font-size: 12px;
-    color: black;
+    color: #497d6e;
 }
 
 
+.square{
+    width: 80%;
+    height: 100%;
+    border: 2px solid black;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.square button{
+    border: none;
+    /* padding: 4px; */
+    background-color: rgb(228, 55, 2);
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 18px;
+    cursor: pointer;
+}
+
+.alpa{
+    display: flex;
+    justify-content: space-between;
+}
+
+.listo{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 50px;
+}
+
+.listo ul>li{
+    margin-bottom: 20px;
+}
+
+
+.food{
+    font-size: 32px;
+}
+
+.listi{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 30px;
+}
+
+.listi ul>li{
+    margin-bottom: 40px;
+}
