--- a/index.css
+++ b/index.css
@@ -738,3 +738,40 @@
         text-align: center;
     }
 }
+
+
+
+
+/* Listing Side Start from here  */
+
+
+#listing{
+    width: 100%;
+    height: 800px;
+    background-color: #497d6e;
+}
+
+
+.pad{
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    
+}
+
+#listing .shop{
+    color: whitesmoke;
+    font-size: 24px;
+}
+
+#listing .pick{
+    color: whitesmoke;
+    font-size: 34px;
+}
+
+#listing .valley{
+    color: whitesmoke;
+    font-size: 12px;
+    line-height: 2.5;
+}
