--- a/index.css
+++ b/index.css
@@ -775,3 +775,102 @@
     font-size: 12px;
     line-height: 2.5;
 }
+
+
+.middle1{
+    width: 250px;
+    height: 390px;
+    /* border: 2px solid black; */
+    border-radius: 16px;
+    overflow: hidden;
+}
+
+.middle2{
+    width: 250px;
+    height: 390px;
+    /* border: 2px solid black; */
+    border-radius: 16px;
+    overflow: hidden;
+}
+
+
+.middle3{
+    width: 250px;
+    height: 390px;
+    /* border: 2px solid black; */
+    border-radius: 16px;
+    overflow: hidden;
+}
+
+.half1{
+    width: 100%;
+    height: 70%;
+    background-color: rgba(122, 224, 224, 0.893);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.half2{
+    width: 100%;
+    height: 30%;
+    background-color: #068f6a;
+    color: whitesmoke;
+}
+
+.half21{
+    display: flex;
+    justify-content: space-between;
+    padding: 4px;
+}
+
+.phase2{
+    display: flex;
+    gap: 2px;
+}
+
+.num{
+    font-size: 8px;
+}
+
+.gola{
+    width: 40px;
+    height: 40px;
+    /* border: 1px solid black; */
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #03563e;
+}
+
+
+.half33{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    gap: 100px;
+}
+
+.middle{
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+}
+
+
+.arrow-left{
+    cursor: pointer;
+}
+
+
+
+.arrow-right{
+    cursor: pointer;
+}
+
+.change{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+}
