--- a/index.css
+++ b/index.css
@@ -1090,12 +1090,14 @@
 
 .newsletter{
     width: 100%;
-    height: fit-content;
+    height: 180px;
     background-color: #068f6a;
     display: flex;
     justify-content: center;
     gap: 300px;
     padding-top: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .input{
@@ -1128,8 +1130,40 @@
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-    border: 2px solid black;
+    border: none;
+    /* border: 2px solid black; */
     border-radius: 26px;
     background-color: rgb(249, 28, 28);
     cursor: pointer;
+    color: whitesmoke;
+}
+
+
+
+/* Responsive the Newsletter Side */
+
+@media only screen and (max-width:990px){
+    .newsletter{
+        flex-direction: column;
+        height: 300px;
+        align-items: center;
+        gap: 50px;
+        justify-content: start;
+    }
+}
+
+@media only screen and (max-width:570px){
+    .newsletter{
+        text-align: center;
+    }
+    .input{
+        width: 400px;
+    }
+}
+
+
+@media only screen and (max-width:455px){
+    .newsletter{
+        padding: 20px;
+    }
 }
