--- a/index.css
+++ b/index.css
@@ -1175,21 +1175,87 @@
 
 #footer{
     width: 100%;
-    height: 1000px;
+    height: fit-content;
     background-color: #03563e;
     color: whitesmoke;
 }
 
 .mail{
     width: 300px;
-    height: 200px;
+    height: 100px;
     height: fit-content;
     background-color: whitesmoke;
+    display: flex;
+    justify-content: space-between;
 }
 
 .mail input{
     border: none;
     outline: none;
-    padding: 20px;
-    background-color: rgb(255, 253, 253);
+    padding: 10px;
+    /* background-color: rgb(255, 253, 253); */
+    background-color: whitesmoke;
+}
+.mail button{
+    background-color: rgb(241, 50, 50);
+    border: none;
+    width: 100px;
+    cursor: pointer;
+}
+
+.upper{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.upper ul>li{
+    list-style-type: none;
+}
+
+.upper1{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.upper2 .dota{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: end;
+    margin-top: 50px;
+}
+
+.upper3 .dota{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: end;
+    margin-top: 50px;
+
+}
+
+.upper4 .dota{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: end;
+    margin-top: 50px;
+
+}
+
+.upper5 .dota{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: end;
+    margin-top: 50px;
+}
+
+.lower{
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+    padding-bottom: 10px;
 }
